--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 </head>
 <body>
+  <h1 style="text-align:center">Report valid issues to <a href="https://hackerone.com/ed">hackerone.com/ed</a>.</h1>
   <div id="gitalk-container"></div>
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <script>
