--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>hackerone.com/ed</title>
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' ajax.googleapis.com code.jquery.com cdnjs.cloudflare.com; connect-src 'self' api.github.com cors-anywhere.herokuapp.com; style-src 'self' 'unsafe-inline' code.ionicframework.com fonts.googleapis.com; img-src *; font-src *; reflected-xss block; require-sri-for script; upgrade-insecure-requests;">
 </head>
 <body>
   <h1 style="text-align:center">Report valid issues to <a href="https://hackerone.com/ed">hackerone.com/ed</a>.</h1>
